[package]
name = "i2o2"
version = "0.1.0"
edition = "2024"
description = "A io_uring based IO executor for sync and async runtimes"
readme = "README.md"
exclude = ["/.idea"]
categories = ["asynchronous", "concurrency"]
keywords = ["io_uring", "scheduler"]

[features]
# Enable tracing in the hotpath of the scheduler
trace-hotpath = []

[dependencies]
thiserror = "2"
io-uring = "0.7"
futures-executor = "0.3"
futures-util = "0.3"
libc = "0.2"
slab = "0.4"
flume = "0.11"
tracing = "0.1"
parking_lot = "0.12"
smallvec = "1.15"

[dev-dependencies]
rstest = "0.25"
tempfile = "3.20"
tracing-subscriber = "0.3.19"

# rt-multi-thread & sync used for benchmarks + examples
tokio = { version = "1", features = ["macros", "time", "rt", "rt-multi-thread", "sync"] }

# benchmark deps
tabled = "0.19"

# Examples
[[example]]
name = "sync_no_op"
test = true

[[example]]
name = "async_no_op"
test = true

# Benchmarking
[[bench]]
name = "no_op_throughput_sync"
harness = false

[[bench]]
name = "no_op_throughput_async"
harness = false