[package]
name = "i2o2"
version = "0.2.0"
edition = "2024"
description = "A io_uring based IO executor for sync and async runtimes"
readme = "README.md"
exclude = ["/.idea"]
categories = ["asynchronous", "concurrency"]
keywords = ["io_uring", "scheduler"]
license = "MIT"

[features]
# Enable tracing in the hotpath of the scheduler
trace-hotpath = []

[dependencies]
thiserror = "2"
futures-executor = "0.3"
libc = "0.2"
slab = "0.4"
tracing = "0.1"
parking_lot = "0.12"
flume = "0.11"

axboe-liburing = "2.11.0"

crossbeam-queue = "0.3.12"
atomicring = "1.2.9"


tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
rstest = "0.25"
tempfile = "3.20"
tracing-subscriber = "0.3.19"
memmap2 = "0.9.5"

# rt-multi-thread & sync used for benchmarks + examples
tokio = { version = "1", features = ["full"] }
fail = { version = "0.5.1", features = ["failpoints"] }

# benchmark deps
tabled = "0.19"
anyhow = "1"
humansize = "2.1.3"
ulid = "1.2"
fastrand = "2.3"
glommio = "0.9.0"

# Examples
[[example]]
name = "sync_no_op"
test = true

[[example]]
name = "async_no_op"
test = true

# Benchmarking
[[bench]]
name = "no_op_throughput_sync"
harness = false

[[bench]]
name = "no_op_throughput_async"
harness = false

[[bench]]
name = "buffered_io_write_throughput_sync"
harness = false

[[bench]]
name = "buffered_io_write_throughput_async"
harness = false

[[bench]]
name = "direct_io_random_read"
harness = false